build file changed

--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,8 @@ buildDir  = "/home/ec2-user/PythonFromJenkins"
 println '-----------STARTED BUILD GRADLE ---------'
 task build
         task compile(type: Exec){
-                workingDir '/home/ec2-user/PythonFromJenkins'
-                commandLine "python", "app.py"
+                workingDir '$buildDir'
+                commandLine 'python', 'app.py'
         println 'Compiled'
 
 }
