build file changed again

--- a/build.gradle
+++ b/build.gradle
@@ -11,12 +11,12 @@ plugins {
 buildDir  = "/home/ec2-user/PythonFromJenkins"
 println '-----------STARTED BUILD GRADLE ---------'
 task build
-        task compile(type: Exec){
+        /*task compile(type: Exec){
                 workingDir '$buildDir'
                 commandLine 'python', 'app.py'
         println 'Compiled'
 
-}
+}*/
 task zip(type: Zip) {
     archiveFileName = "HelloWorld.zip"
     destinationDirectory = file("$buildDir/srcHelloWorld")
@@ -26,6 +26,6 @@ task zip(type: Zip) {
         println 'packaged'
 }
 build.dependsOn zip
-zip.dependsOn compile
+//zip.dependsOn compile
 
 
